# Omnigent

./: .gitignore  LICENSE  README.md  omnigent.key.pub  wrangler.toml
.github/workflows/: tauri-build.yml
public/: index.html  manifest.json  styles-2.css  styles.css  sw.js
public/coding/: app.js  index.html
public/flow/: canvas.js  engine.js  help.js  index.html  nodes.js
public/image/: app.js  index.html  styles.css
public/js/: cost-widget.js
public/js/image/core/: chat-image.js  image-chat.js
public/js/image/quota/: image-quota.js
public/js/image/store/: image-album.js  image-cache.js
public/js/text/core/: dev.js  unlock.js
public/js/text/data/: character.js  lorebook.js  props.js  sync.js
public/js/text/engine/: app.js  autopilot.js  fishbowl-engine.js  multi-agent.js  wechat-group.js
public/js/text/ui/: chat-extras.js  chat-ux.js  choices.js  cost-log-ui.js  settings.js  theme.js  unlimited-editor.js
public/presets/: starter-emotion-map.json  starter-presets.json  starter-skills.json
public/shared/: README.md  agent-console.js  agent-kernel.js  agent-llm-adapter.js  agent-reach.js  agent-tools-local.js  env-context.js  image-common.js  skills.js  theme.css  tools.js  tts.js
public/studio/: app.js  index.html  styles.css
public/write/: index.html
src/: config.js  worker.js
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/src/: http_stream.rs  lib.rs  main.rs
